--- a/CDN/index.html
+++ b/CDN/index.html
@@ -12,6 +12,10 @@
 
         <h1>{{titulo}}</h1>
 
+        <ul>
+            <li v-for="fruta of frutas">{{fruta}}</li>
+        </ul>
+
 
     </div>
 
