--- a/Methods, v-model/index.html
+++ b/Methods, v-model/index.html
@@ -13,7 +13,7 @@
 
         <h1>{{titulo}}</h1>
         
-       <input type="text" v-model="nuevaFruta">
+       <input type="text" v-model="nuevaFruta" @keyup.enter="agregarFruta">
         <button v-on:click="agregarFruta">Agregar fruta</button>
        
        <!--<button @click="agregarFruta">Agregar fruta</button>>-->
