--- a/clases vuejs/index.html
+++ b/clases vuejs/index.html
@@ -17,14 +17,22 @@
 
     <div id="app" class="container mt-5" >
 
-        <div class="bg-danger" :class="'p-3'" >
+        <div :class="['p-3','text-white',fondo]" >
             <!--una clase con vue se pone entre comillas simples-->
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Ea id, deleniti minima rem beatae corporis magni minus ipsa laudantium, 
             esse nemo soluta quibusdam quod illo nisi facilis cupiditate dolorem alias?
         </p>
         </div>
+        <input type="text" class="form-control my-3" v-model="fondo">
 
+        <div class="text-white p-3" :class="{'bg-info' : color, 'bg-success' : !color}">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, at accusamus possimus deserunt expedita pariatur perferendis qui, ullam repellendus sunt rerum consectetur corporis sequi quisquam tempora ex quo debitis exercitationem.
+            </p>
+        </div>
+
+        <button class="btn btn-primary" @click="color = !color">Cambiar</button>
 
     </div>
     
