CRUD con vanilla JS

--- a/JS/CRUD vainilla/index.html
+++ b/JS/CRUD vainilla/index.html
@@ -31,6 +31,7 @@
         </form>
 
         <div id="listaActividades" class="mt-4">
+            
             <div class="alert alert-danger" role="alert">
                 <span class="material-icons float-left mr-2">
                     accessibility
@@ -38,12 +39,12 @@
                     
                 <b>Texto de la actividad</b> - estado
                 <span class="float-right">
-                    <span class="material-icons">
+                    <i class="material-icons">
                         done
-                    </span>
-                    <span class="material-icons">
+                    </i>
+                    <i class="material-icons">
                         delete
-                        </span>
+                    </i>
 
                 </span>                 
               </div>
