--- a/JS/tuto/FETCH/Fetch ajax/index.html
+++ b/JS/tuto/FETCH/Fetch ajax/index.html
@@ -13,7 +13,7 @@
 
         <button class="btn btn-danger w-100" onclick="traer()">Obtener</button>
         
-        <div class="mt-5" id="#contenido">
+        <div class="mt-5" id="contenido">
             <p>
 
             </p>
