--- a/JS/tuto/FETCH/Fetch ajax/index.html
+++ b/JS/tuto/FETCH/Fetch ajax/index.html
@@ -14,9 +14,9 @@
         <button class="btn btn-danger w-100" onclick="traer()">Obtener</button>
         
         <div class="mt-5" id="contenido">
-            <p>
+            <img src="" width="100px" class="img-fluid rounded-circle">
+            <p>Nombre: </p>
 
-            </p>
         </div>
 
     </div>
