--- a/VUEJS/COMPUTED/index.html
+++ b/VUEJS/COMPUTED/index.html
@@ -22,8 +22,8 @@
         <div class="progress">
         
             <div class="progress-bar bg-success" role="progressbar" 
-         
-             aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"
+            :style="{'width': contador+'%'}"
+            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"
             :class="color"
              >
             {{contador}}%
