--- a/VUEJS/lifecycle/index.html
+++ b/VUEJS/lifecycle/index.html
@@ -12,6 +12,8 @@
     <div id="app" class="container">
 
         <h3>{{mensaje}}</h3>
+        <button @click="mensaje = 'hola'">Cambiar</button>
+        <button @click="destruir()">Destroy</button>
 
     </div>
 
