--- a/VUEJS/mapMutationwVuex/index.html
+++ b/VUEJS/mapMutationwVuex/index.html
@@ -31,8 +31,9 @@
             aumentar(state){
                 state.numero++
             },
-            disminuye(state){
-                state.numero--
+            //funcion con parametro n, n es para que disminuya n veces
+            disminuye(state,n){
+                state.numero -= n
             }
         }
 
